fix wrong positionement of content

--- a/style.css
+++ b/style.css
@@ -166,7 +166,6 @@ header {
 	margin: auto;
 	max-width: 768px;
 	left: 0;
-	padding-left: 0;
 }
 
 .open {
